--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
 html,
 body {
   padding: 0;
@@ -16,5 +17,42 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  * {
+    scroll-behavior: smooth !important;
+  }
+}
+
+header nav > ul {
+  padding-inline-start: 0;
+  margin-block: 0;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+header nav > ul::-webkit-scrollbar {
+  display: none;
+}
+
+header nav {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+header nav::-webkit-scrollbar {
+  display: none;
+}
+
+header nav li a {
+  display: inline-block;
+  white-space: nowrap;
+  padding: 5px 5px;
+  text-decoration: none;
+}
+
+main {
+  min-height: calc(100vh - 130px);
 }
