--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -258,6 +258,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
+  border: none;
   -webkit-appearance: button; /* 1 */
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
