--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -7,7 +7,7 @@
   align-items: center;
   gap: 2rem;
   padding: 0.25rem 1rem;
-  background-color: var(--clr-dark-5);
+  background-color: var(--clr-light-2);
   position: fixed;
   top: 0;
   left: 0;
