--- a/styles/base/typography.css
+++ b/styles/base/typography.css
@@ -96,9 +96,11 @@ h6 {
   /* font-size: 0.67rem; */
   font-size: 0.83rem;
 }
-p {
+p,
+li {
   font-size: 1rem;
   letter-spacing: 0.02rem;
+  line-height: 1.25rem;
 }
 
 /* @docs
