--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -10,5 +10,6 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 6rem 2rem 2rem;
+  padding: 6rem 10% 2rem;
+  position: relative;
 }
