--- a/styles/layout/aside.css
+++ b/styles/layout/aside.css
@@ -1,6 +1,6 @@
 .aside-overly {
   position: fixed;
-  top: 8rem;
+  top: 5rem;
   left: 0;
   right: 70%;
   bottom: 0;
@@ -8,13 +8,20 @@
   z-index: 9999;
 }
 
+.cross-on-modal {
+  position: fixed;
+  top: 5.5rem;
+  right: 70.5%;
+  z-index: 99999;
+}
+
 .aside-modal__main {
-  top: 8rem;
-  padding: 10px;
+  position: fixed;
+  top: 5rem;
+  padding: 3rem 2rem 2rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  position: fixed;
   left: 0;
   right: 70%;
   z-index: 9999;
@@ -29,4 +36,11 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+@supports (--webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .aside-overly {
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+  }
 }
