new components, javascript started by meta

--- a/styles/utils/utilities.css
+++ b/styles/utils/utilities.css
@@ -31,3 +31,9 @@ note: |
 .not-rounded {
   border-radius: 0;
 }
+
+mark {
+  padding: 0 0.125rem;
+  background-color: var(--clr-light-2);
+  font-weight: bold;
+}
