--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@
 @import "./components/dynamicComponents.css";
 @import "./components/modal.css";
 @import "./components/gap.css";
+@import "./components/code.css";
 
 /* pages */
 @import "./pages/meta.css";
